test_suite/tests/ui/common/attribute_with_wrong_case.rs
use nutype::nutype;

#[nutype(validate(maxLen = 255))]
pub struct Name(String);

fn main () {}
